@@ -13,8 +13,19 @@ class GitHub:
     def __init__(self, requests, params):
         self.requests = requests
         self.token = params["token"]
-        logger.secret(self.token)
-        self.headers = {"Authorization": f"token {self.token}"} if self.token else None
+        self.headers = None
+        if self.token:
+            logger.separator()
+            logger.info("Connecting to GitHub...")
+            logger.secret(self.token)
+            self.headers = {"Authorization": f"token {self.token}"}
+            try:
+                response = self._requests("https://api.github.com/user", err_msg="The GitHub token specified could not be validated. Please verify that the token is correct.")
+                logger.info(f"GitHub token validated successfully. Authenticated as {response['login']}")
+            except Failed as e:
+                self.token = None
+                self.headers = None
+                logger.error(e)
         self.images_raw_url = f"{raw_url}/Kometa-Team/Image-Sets/master/sets/"
         self.translation_url = f"{raw_url}/Kometa-Team/Translations/master/defaults/"
         self._configs_url = None
@@ -29,14 +40,13 @@ class GitHub:
             return self.requests.get_yaml(url, headers=self.headers, params=params)
         response = self.requests.get(url, headers=self.headers, params=params)
         if response.status_code >= 400:
-            logger.stacktrace()
-            logger.error(response.reason)
-            raise Failed(f"Git Error: {err_msg}")
+            raise Failed(f"GitHub Error: {err_msg} Response: {response.status_code} - {response.reason} ")
         try:
             return response.json()
         except ValueError:
+            logger.stacktrace()
             logger.error(str(response.content))
-            raise
+            raise Failed("GitHub JSON Unpack Error")
 
     def get_top_tree(self, repo):
         if not str(repo).startswith("/"):
